# CrabPort

./: Cargo.toml  README.en.md  README.md  app-icon.icns
.github/workflows/: dev.yml  release.yml
crabport-core/: Cargo.toml
crabport-core/src/: config.rs  credential.rs  lib.rs  store.rs
crabport-core/src/store/: commands.rs  credentials.rs  hosts.rs  proxies.rs  snippets.rs  tunnels.rs
crabport-editor/: Cargo.toml
crabport-editor/src/: lib.rs
crabport-forward/: Cargo.toml
crabport-forward/src/: lib.rs
crabport-proxy/: Cargo.toml
crabport-proxy/src/: lib.rs
crabport-sftp/: Cargo.toml
crabport-sftp/src/: api.rs  archive.rs  backend.rs  lib.rs  transfer.rs
crabport-ssh/: Cargo.toml
crabport-ssh/src/: backend.rs  crabport_tunnel.rs  handler.rs  keys.rs  known_hosts.rs  lib.rs  monitor.rs  owned_session.rs  session.rs  terminal.rs  transfer.rs
crabport-ssh/src/transfer/: dir.rs  file.rs  handle.rs  path.rs
crabport-telnet/: Cargo.toml
crabport-telnet/src/: backend.rs  lib.rs  session.rs
crabport-terminal/: Cargo.toml
crabport-terminal/src/: pty.rs  terminal.rs
crabport-tunnel/: Cargo.toml
crabport-tunnel/src/: lib.rs
crabport-ui/: Cargo.toml  build.rs
crabport-ui/i18n/: en.yml  zh-CN.yml
crabport-ui/src/: app.rs  app_state.rs  assets.rs  color.rs  components.rs  layouts.rs  lib.rs  menus.rs  views.rs  windows.rs
crabport-ui/src/app/: connection.rs  context.rs  hosts.rs  snippets.rs  tabs.rs  tunnels.rs
crabport-ui/src/components/: button.rs  context_menu.rs  dialog.rs  dropdown.rs  input.rs  notification.rs  segmented_control.rs  switch.rs  tabs.rs
crabport-ui/src/layouts/: command_palette.rs  connection_form.rs  content.rs  credential_form.rs  panel.rs  sftp.rs  sidebar.rs  tabbar.rs  terminal_toolbar.rs
crabport-ui/src/layouts/connection_form/: with_certificate.rs  with_password.rs
crabport-ui/src/layouts/panel/: sftp.rs
crabport-ui/src/views/: connection_form.rs  credentials.rs  hosts.rs  panel.rs  snippets.rs  terminal.rs  tunnels.rs
crabport-ui/src/views/connection_form/: with_certificate.rs  with_proxy.rs
crabport-ui/src/views/hosts/: form.rs  with_certificate.rs  with_proxy.rs
crabport-ui/src/views/panel/: history_command_panel.rs  sftp.rs  snippets_panel.rs  tunnels_panel.rs
crabport-ui/src/views/snippets/: form.rs
crabport-ui/src/views/terminal/: color.rs  connection_overlay.rs  fonts.rs  render_cache.rs  runs.rs  selection.rs
crabport-ui/src/views/tunnels/: form.rs  state.rs
crabport-ui/src/windows/: about.rs  registry.rs  settings.rs
src/: main.rs
