[package]
name = "CrabPort"
version = "0.1.0"
edition = "2024"

[dependencies]
crabport-ui = { path = "crabport-ui" }
crabport-core = {path = "crabport-core"}
gpui = { version = "0.2", default-features = false, features = ["font-kit"] }
gpui-component = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace]
members = [
    "crabport-core",
    "crabport-ssh",
    "crabport-sftp",
    "crabport-ui",
    "crabport-terminal",
    "crabport-tunnel",
]
