[package]
name = "crabport-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "ansi", "registry"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
gpui = { version = "0.2", default-features = false }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
parking_lot = "0.12"
rusqlite = { version = "0.34", features = ["bundled"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
getrandom = "0.3"
dirs = "6"
