[package]
name = "crabport-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
crabport-terminal = { path = "../crabport-terminal" }
crabport-sftp = { version = "0.1.0", path = "../crabport-sftp" }
crabport-core = { path = "../crabport-core" }
crabport-proxy = { path = "../crabport-proxy" }
crabport-tunnel = { path = "../crabport-tunnel" }
russh = "0.45"
async-broadcast = "0.7"
async-channel = "2.5"
tokio = { version = "1", features = ["rt", "net", "macros", "io-util"] }
async-trait = "0.1"
anyhow = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
parking_lot = "0.12"
dirs = "6"
